feat: add route to generate exercise pdf from dto
