# src/main/java/com/frauas/exercisegenerator/dtos/SheetDto.java
@@ -1,30 +1,22 @@
 package com.frauas.exercisegenerator.dtos;
 
-import lombok.Data;
+import java.util.List;
 
 import javax.validation.constraints.NotEmpty;
 import javax.validation.constraints.NotNull;
-import java.util.List;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
 
 @Data
-public class CreateExerciseDto {
-
+@AllArgsConstructor
+public class SheetDto {
     @NotNull
     private String title;
 
-    private String note;
-
-    private String shortDescription;
-
     @NotNull
     @NotEmpty
-    private List<String> texts;
-
-    @NotNull
-    @NotEmpty
-    private List<String> solutions;
-
-    private List<String> images;
+    private List<String> exercises;
 
     @NotNull
     @NotEmpty
