# src/main/resources/api.yaml
@@ -38,7 +38,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateSheetDto'
+              $ref: '#/components/schemas/SheetDto'
         required: true
       responses:
         "200":
@@ -92,7 +92,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExerciseDto'
+              $ref: '#/components/schemas/ExerciseDto'
         required: true
       responses:
         "200":
@@ -136,7 +136,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateSheetDto'
+              $ref: '#/components/schemas/SheetDto'
         required: true
       responses:
         "200":
@@ -196,7 +196,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExerciseDto'
+              $ref: '#/components/schemas/ExerciseDto'
         required: true
       responses:
         "200":
@@ -205,6 +205,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Exercise'
+  /exercise/pdf:
+    post:
+      tags:
+      - exercise-controller
+      operationId: previewExerciseDto
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExerciseDto'
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/pdf:
+              schema:
+                type: array
+                items:
+                  type: string
+                  format: byte
   /courses:
     get:
       tags:
@@ -272,6 +293,27 @@ paths:
       tags:
       - sheet-controller
       operationId: getSheetPdf
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/pdf:
+              schema:
+                type: array
+                items:
+                  type: string
+                  format: byte
+  /exercise/{id}/pdf:
+    get:
+      tags:
+      - exercise-controller
+      operationId: getExercisePdf
       parameters:
       - name: id
         in: path
@@ -366,7 +408,7 @@ components:
       properties:
         name:
           type: string
-    CreateSheetDto:
+    SheetDto:
       required:
       - categories
       - courses
@@ -484,7 +526,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Exercise'
-    CreateExerciseDto:
+    ExerciseDto:
       required:
       - categories
       - courses
